@@ -1,7 +1,8 @@
 Koan CHANGELOG
 
-* Tue Aug 14 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.1-1
+* Fri Aug 17 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.1-1
 - Bridged networking control options (--virt-bridge)
+- avahi support (--server=DISCOVER)
 
 * Thu Aug 09 2007 Michael DeHaan <mdehaan@redhat.com> - 0.6.0-1
 - stable release
